--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf public/* && cross-env NODE_ENV=prod node esbuild.config.js",
-    "dev": "rimraf public/* && cross-env NODE_ENV=dev node esbuild.config.js",
+    "build": "cross-env NODE_ENV=prod node esbuild.config.js",
+    "dev": "cross-env NODE_ENV=dev node esbuild.config.js",
     "lint": "eslint --ext .ts,.tsx src --fix"
   },
   "author": "",
@@ -26,6 +26,7 @@
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.12",
     "esbuild-css-modules-plugin": "^2.3.2",
+    "esbuild-plugin-clean": "^0.9.0",
     "esbuild-plugin-dev-server": "^1.1.2",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -38,7 +39,6 @@
     "postcss-cssnext": "^3.1.1",
     "postcss-modules": "^4.3.1",
     "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^26.0.0",
