--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "esbuild": "^0.14.48",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "runtypes": "^6.5.1"
   },
   "devDependencies": {
     "@craftamap/esbuild-plugin-html": "^0.4.0",
