--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,7 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "require-jsdoc": "off",
-    "indent": ["error", 2],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "no-console": 1,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".tsx", ".ts"] }],
     "react/function-component-definition": "off",
@@ -40,6 +40,8 @@
     "no-use-before-define": "off",
     "no-plusplus": "off",
     "@typescript-eslint/no-var-requires": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "error",
     "import/prefer-default-export": "off",
     "import/extensions": [
       "error",
