--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,16 @@
     "@typescript-eslint/no-var-requires": "off",
     "no-shadow": "off",
     "@typescript-eslint/no-shadow": "error",
+    "@typescript-eslint/no-empty-function": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ],
     "import/prefer-default-export": "off",
     "import/extensions": [
       "error",
