--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@eo-locale/react": "^1.7.0",
+    "classnames": "^2.3.1",
     "esbuild": "^0.14.48",
     "msw": "^0.43.1",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
     "esbuild-css-modules-plugin": "^2.3.2",
     "esbuild-plugin-clean": "^0.9.0",
     "esbuild-plugin-dev-server": "^1.1.2",
+    "esbuild-plugin-svgr": "^1.0.1",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
