--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "react/function-component-definition": "off",
     "react/no-unescaped-entities": "off",
     "react/require-default-props": "off",
+    "react-hooks/exhaustive-deps": "off",
     "react/no-array-index-key": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
