--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/no-shadow": "error",
     "@typescript-eslint/no-empty-function": "off",
     "no-unused-vars": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
