--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
     "react-hooks/exhaustive-deps": "off",
     "react/no-array-index-key": "off",
     "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "no-use-before-define": "off",
     "no-plusplus": "off",
@@ -46,6 +47,7 @@
     "@typescript-eslint/no-empty-function": "off",
     "no-unused-vars": "off",
     "jsx-a11y/label-has-associated-control": "off",
+    "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
