--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
     "react/no-unescaped-entities": "off",
     "react/require-default-props": "off",
     "react-hooks/exhaustive-deps": "off",
+    "react/button-has-type": "off",
     "react/no-array-index-key": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
