--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
     "react/require-default-props": "off",
     "react-hooks/exhaustive-deps": "off",
     "react/button-has-type": "off",
+    "react/jsx-no-useless-fragment": "off",
     "react/no-array-index-key": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
