--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@eo-locale/react": "^1.7.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "esbuild": "^0.14.48",
     "msw": "^0.43.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "runtypes": "^6.5.1"
   },
@@ -25,6 +27,7 @@
     "@deanc/esbuild-plugin-postcss": "^1.0.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-query": "^1.2.9",
     "@typescript-eslint/eslint-plugin": "^5.30.4",
     "@typescript-eslint/parser": "^5.30.4",
     "cross-env": "^7.0.3",
