--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@craftamap/esbuild-plugin-html": "^0.4.0",
     "@deanc/esbuild-plugin-postcss": "^1.0.2",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-query": "^1.2.9",
@@ -44,6 +46,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^28.1.3",
     "postcss-cssnext": "^3.1.1",
     "postcss-modules": "^4.3.1",
     "prettier": "^2.7.1",
