--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "cross-env NODE_ENV=prod node esbuild.config.js",
     "dev": "cross-env NODE_ENV=dev node esbuild.config.js",
-    "lint": "eslint --ext .ts,.tsx src --fix"
+    "lint": "eslint --ext .ts,.tsx src --fix",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -25,8 +27,10 @@
   "devDependencies": {
     "@craftamap/esbuild-plugin-html": "^0.4.0",
     "@deanc/esbuild-plugin-postcss": "^1.0.2",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.3",
+    "@types/jest": "^28.1.5",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-query": "^1.2.9",
@@ -35,6 +39,7 @@
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.12",
     "esbuild-css-modules-plugin": "^2.3.2",
+    "esbuild-jest": "^0.5.0",
     "esbuild-plugin-clean": "^0.9.0",
     "esbuild-plugin-dev-server": "^1.1.2",
     "esbuild-plugin-svgr": "^1.0.1",
@@ -47,6 +52,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "postcss-cssnext": "^3.1.1",
     "postcss-modules": "^4.3.1",
     "prettier": "^2.7.1",
@@ -54,6 +60,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^26.0.0",
     "stylelint-prettier": "^2.0.0",
+    "ts-jest": "^28.0.6",
     "typescript": "^4.7.4"
   },
   "prettier": {
