--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "cross-env NODE_ENV=dev node esbuild.config.js",
     "lint": "eslint --ext .ts,.tsx src --fix",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -51,6 +52,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "postcss-cssnext": "^3.1.1",
